[tool.poetry]
name = "pytest-sessionstart-sessionfinish-example"
version = "0.1.0"
description = "A simple exmaple demonstrating pytest sessionstart and sessionfinish hook."
authors = ["Pytest-with-Eric"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
